--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,15 +1,15 @@
-# Dockerfile for universalresolver/driver-did-sov
+# Dockerfile for universalresolver/driver-did-com
 
 FROM maven:3-jdk-11 AS build
-MAINTAINER Markus Sabadello <markus@danubetech.com>
+MAINTAINER Fausto Spoto <fausto.spoto@univr.it>
 
-# build driver-did-sov
+# build driver-did-com
 
-ADD . /opt/driver-did-sov
-RUN cd /opt/driver-did-sov && mvn clean install package -P war -N -DskipTests
+ADD . /opt/driver-did-com
+RUN cd /opt/driver-did-com && mvn clean install package -P war -N -DskipTests
 
 FROM jetty:9.4-jre11-slim
-MAINTAINER Markus Sabadello <markus@danubetech.com>
+MAINTAINER Fausto Spoto <fausto.spoto@univr.it>
 
 # install dependencies
 
@@ -17,27 +17,17 @@ USER root
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get -y update && \
-    apt-get install -y --no-install-recommends software-properties-common gnupg && \
-    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 68DB5E88 && \
-    add-apt-repository "deb https://repo.sovrin.org/sdk/deb bionic stable" && \
-    apt-get -y update && \
-    apt-get install -y libindy=1.16.0-bionic && \
-    apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    apt-get install -y --no-install-recommends software-properties-common gnupg
 
 USER jetty
 
 # variables
 
-ENV uniresolver_driver_did_sov_libIndyPath=
-ENV uniresolver_driver_did_sov_poolConfigs=_;./sovrin/_.txn;staging;./sovrin/staging.txn;builder;./sovrin/builder.txn;danube;./sovrin/danube.txn;idu;./sovrin/idu.txn;eesdi;./sovrin/eesdi.txn;indicio;./sovrin/indicio.txn;indicio:test;./sovrin/indicio-test.txn;indicio:demo;./sovrin/indicio-demo.txn;bbu;./sovrin/bbu.txn
-ENV uniresolver_driver_did_sov_poolVersions=_;2;staging;2;builder;2;danube;2;idu;2;eesdi;2;indicio;2;indicio:test;2;indicio:demo;2;bbu;2
-ENV uniresolver_driver_did_sov_walletNames=_;w1;staging;w2;builder;w3;danube;w4;idu;w5;eesdi;w6;indicio;w7;indicio:test;w8;indicio:demo;w9;bbu;w10
-ENV uniresolver_driver_did_sov_submitterDidSeeds=_;_;staging;_;builder;_;danube;_;idu;_;eesdi;_;indicio;_;indicio:test;_;indicio:demo;_;bbu;_
+ENV uniresolver_driver_did_com_network="https://lcd-devnet.commercio.network"
 
 # copy from build stage
 
-COPY --from=build --chown=jetty /opt/driver-did-sov/target/*.war /var/lib/jetty/webapps/ROOT.war
-COPY --from=build --chown=jetty /opt/driver-did-sov/sovrin/ /var/lib/jetty/sovrin/
+COPY --from=build --chown=jetty /opt/driver-did-com/target/*.war /var/lib/jetty/webapps/ROOT.war
 
 # done
 
